fix overlow and visual alignment on platformSelector

--- a/src/components/platformSelector/style.module.scss
+++ b/src/components/platformSelector/style.module.scss
@@ -15,6 +15,14 @@
   color: hsl(204 4% 0%);
   border: 2px solid #c7c5cc;
   color-scheme: light;
+
+  .item-text {
+    align-items: center;
+
+    .platform-icon {
+      translate: none;
+    }
+  }
 }
 
 .select:focus {
@@ -33,10 +41,6 @@
   }
 }
 
-.select-icon {
-  translate: 4px 0;
-}
-
 .popover {
   z-index: 50;
   height: var(--radix-select-content-available-height);
@@ -52,6 +56,7 @@
   border-color: transparent;
   height: 2.5rem;
   margin-bottom: 0.5rem;
+
   &:focus {
     box-shadow: none;
   }
@@ -130,9 +135,13 @@
 
 .item-text {
   display: flex;
-  align-items: center;
+  align-items: start;
   gap: 0.25rem;
   text-align: left;
+
+  .platform-icon {
+    translate: 0 4px;
+  }
 }
 
 @media (min-width: 1024px) {
